--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,7 +32,7 @@
 en:
   activerecord:
     models:
-      user: "Customer"
+      user: "User"
     attributes:
       user:
         familyName: "Family name"
